--- a/backend/buildspec.yml
+++ b/backend/buildspec.yml
@@ -4,29 +4,24 @@ phases:
   install:
     runtime-versions:
       python: 3.9
-    commands:
-      - echo "Installing dependencies"
-  pre_build:
-    commands:
-      - echo "Preparing Lambda function packages"
+  
   build:
     commands:
-      - echo "Building Lambda functions"
-      - |
-        cd lambda/index-photos
-        pip install -r requirements.txt -t .
-        zip -r ../../../index-photos.zip . -x "*.pyc" "__pycache__/*" "*.git*"
-      - |
-        cd lambda/search-photos
-        pip install -r requirements.txt -t .
-        zip -r ../../../search-photos.zip . -x "*.pyc" "__pycache__/*" "*.git*"
+      - echo "Packaging Lambda functions..."
+      - cd backend/lambda/index-photos
+      - zip -r ../../../index-photos.zip lambda_function.py
+      - cd ../search-photos
+      - zip -r ../../../search-photos.zip lambda_function.py
+      - cd ../../..
+  
   post_build:
     commands:
-      - echo "Build completed successfully"
+      - echo "Deploying Lambda functions..."
+      - aws lambda update-function-code --function-name index-photos --zip-file fileb://index-photos.zip
+      - aws lambda update-function-code --function-name search-photos --zip-file fileb://search-photos.zip
+      - echo "Deployment complete"
 
 artifacts:
   files:
-    - 'index-photos.zip'
-    - 'search-photos.zip'
-  base-directory: .
-
+    - index-photos.zip
+    - search-photos.zip
